--- a/client/styles/NavBar.module.css
+++ b/client/styles/NavBar.module.css
@@ -4,13 +4,10 @@
     padding-bottom: 6px;
     border-bottom: 1px solid #d6d6d6;
     line-height: 1;
-    -webkit-box-shadow: 0px 3px 5px 0px rgba(34, 60, 80, 0.2);
-    -moz-box-shadow: 0px 3px 5px 0px rgba(34, 60, 80, 0.2);
-    box-shadow: 0px 3px 5px 0px rgba(34, 60, 80, 0.2);
+    box-shadow: 0 1px 6px 0 rgba(32 ,33, 36,0.15);
     position: sticky;
     top: 0;
     z-index: 10;
-
 }
 .header_logo{
     font-weight: 600;
