--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -136,6 +136,35 @@ src: url("../public/static/Fonts/Poppins/Poppins-Light.ttf") format("truetype");
   padding-top: 0px;
   transition: margin-left .25s cubic-bezier(0.4,0.0,0.2,1),visibility 0s linear 0s;
 }
+.title_post{
+  font-size: 36px;
+  line-height: 44px;
+  font-weight: bold;
+  margin-bottom: 30px;
+  padding-top: 30px;
+  max-width: 768px;
+}
+.container_text{
+  margin-bottom: 30px;
+  padding-top: 30px;
+  max-width: 768px;
+}
+.key_plate{
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: row;
+  padding: 10px 10px 10px 15px;
+}
+.key_item{
+  padding-right: 10px;
+  padding-left: 10px;
+}
+.post_img{
+  display: block;
+  position: relative;
+  height:432px;
+  max-width:768px;
+}
 .article_card{
   display: block;
   border: 1px solid #dfe1e5;
