--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -339,22 +339,32 @@ a{
   box-shadow:0 1px 6px 0 rgba(32 33 36 0.28);
 }
 .container_head{
+}
+.items{
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   padding: 10px 10px 10px 0px;
+  cursor: pointer;
+  overflow-x: scroll;
+}
+.container_head ::-webkit-scrollbar{
+  width: 0;
 }
 .cattext{
   border-radius: 8px;
   background: #f1f3f4;
   border: 1px solid transparent;
-  margin-right: 8px;
-  margin-left: 8px;
+  margin-right: 10px;
+  display: inline-block;
+  align-items: center;
+  justify-content: center;
 }
 .ctext{
   padding: 5px 10px;
   width: 100%;
-  max-height: 38px
+  max-height: 38px;
+  text-align: center;
 }
 .catname{
   color: black;
@@ -363,6 +373,9 @@ a{
   white-space: nowrap;
   -webkit-line-clamp: 1;
   vertical-align: middle;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  user-select: none;
 }
 .catname:hover{
   text-decoration: underline;
@@ -370,4 +383,29 @@ a{
 .bottom_bar{
   padding-top: 5px;
   padding-bottom: 5px;
+}
+.row {
+  height: 65px;
+  min-width: 100px;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 24px;
+  display: inline-block;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
+.row:nth-child(1n) {
+  background: #7b7;
+}
+
+.row:nth-child(2n) {
+  background: #7c7;
+}
+
+.container {
+  white-space: nowrap;
 }
